fix(styles): avoid 'flashing scrollbar' when clicking on user-action-menu button

--- a/src/components/space-users-manager/SpaceUsersManager.scss
+++ b/src/components/space-users-manager/SpaceUsersManager.scss
@@ -14,6 +14,7 @@
   .list-container {
     display: flex;
     flex-direction: column;
+    padding-bottom: $spacing-unit/2;
     overflow-x: hidden;
     overflow-y: auto;
   }
